--- a/Development-HRO.csproj
+++ b/Development-HRO.csproj
@@ -5,5 +5,10 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <RootNamespace>Development_HRO</RootNamespace>
   </PropertyGroup>
+<ItemGroup>
+    <Reference Include="Tester">
+      <HintPath>..\..\Libraries\Tester.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 
 </Project>
